--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,9 @@ body {
         "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: url("./crypto-min.jpg");
-    background-position: center;
-    background-size: auto;
-    background-repeat: repeat;
+    background-color: #2c3e50;
+    overflow: hidden;
+    height: 100vh;
 }
 
 code {
