--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@ body {
         "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #2c3e50;
+    background-color: #582468;
     overflow: hidden;
-    height: 100vh;
 }
 
 code {
